force-app/main/default/objects/Job_Application__c/validationRules/Prevent_Application_If_Job_Not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Application_If_Job_Not_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
NOT(
  ISPICKVAL(Job_Posting__r.Status__c, &quot;Approved&quot;) ||
  ISPICKVAL(Job_Posting__r.Status__c, &quot;Published&quot;) ||
  ISPICKVAL(Job_Posting__r.Status__c, &quot;In Progress&quot;)
)</errorConditionFormula>
    <errorMessage>You can only apply for a job that is in &apos;Approved&apos; or &apos;Published&apos; status.</errorMessage>
</ValidationRule>